fix: fix spacing between accordions

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -2983,8 +2983,10 @@
     .cs-container {
       > ul {
         > li {
+          padding-bottom: (16/16rem);
+
           &:last-child {
-            padding-bottom: (32/16rem);
+            padding-bottom: (16/16rem);
           }
 
           &:before {
